// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #EE0505;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #EE0505;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #EE0505,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Alert
</button>
`;

exports[`Compact button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Compact
</button>
`;

exports[`Disabled button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
  disabled=""
>
  Disabled
</button>
`;

exports[`Full width button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Full width
</button>
`;

exports[`Large button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 18px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Large
</button>
`;

exports[`Left icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-left: 8px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  <div>
    My icon
  </div>
  <span
    class="c1"
  >
    Left icon
  </span>
</button>
`;

exports[`Link button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #4A3EDE;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Link
</button>
`;

exports[`Link contrast button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Link contrast
</button>
`;

exports[`Primary button renders the component with props with no a11y violations 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Primary
</button>
`;

exports[`Primary contrast button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #FFFFFF;
  border-radius: 8px;
  background-color: #FFFFFF;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #FFFFFF,inset 0 0 0 4px #4A3EDE;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Primary contrast
</button>
`;

exports[`Right icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Right icon
  </span>
  <div>
    My icon
  </div>
</button>
`;

exports[`Secondary button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #4A3EDE;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 4px #4A3EDE;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  color: #FFFFFF;
  background-color: #4A3EDE;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Secondary
</button>
`;

exports[`Secondary contrast button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: inset 0 0 0 2px #FFFFFF;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  background-color: transparent;
  box-shadow: inset 0 0 0 2px #FFFFFF;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Secondary contrast
</button>
`;

exports[`Small button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 30px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Small
</button>
`;

exports[`Warning button renders the component with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 40px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 400;
  cursor: pointer;
  border: 1px solid #FFB428;
  border-radius: 8px;
  color: #0D0A38;
  background-color: #FFB428;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:enabled {
  box-shadow: none;
}

.c0:active:enabled,
.c0:focus:enabled {
  box-shadow: inset 0 0 0 2px #FFB428,inset 0 0 0 4px #0D0A38;
  outline: none;
}

.c0:hover:enabled {
  opacity: 0.8;
  box-shadow: none;
}

.c0:active:enabled {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Warning
</button>
`;
